2023-10-06  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.68 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass):
	Regenerated.

	* ebuild-mode.el (ebuild-mode-add-font-lock): New function.
	(ebuild-mode-hook): Add it, instead of an anonymous function.
	* glep-mode.el (glep-mode-add-font-lock, glep-mode-hook): Ditto.

2023-09-25  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.texi (ebuild-mode): Document the
	ebuild-mode-find-workdir command and its keybinding.
	(ebuild-repo-mode): Document ebuild-mode-xml-indent-tabs.

2023-09-20  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-tag-line-regexp): New variable.
	(ebuild-repo-mode): Set paragraph-separate when in conf-unix-mode.

2023-09-16  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-time-string): Test if
	format-time-string can accept three arguments.

	* ebuild-mode.el (sh-must-be-shell-mode): Test if the function is
	defined at compile time. This should only be the case for Emacs
	versions where defadvice is unobsolete.

	* glep-mode.el (rst-classify-adornment)
	(glep-mode-ignore-preamble): Use :before-while instead of :around
	as advice combinator.

2023-09-12  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.67 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass):
	Regenerated.

2023-09-04  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-insert-tag-line): Make it work when
	comment-start is nil or empty.

2023-09-01  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-insert-skeleton): Add S and BDEPEND.
	Bug 729280.

2023-08-29  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.66 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass):
	Regenerated.

2023-08-26  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode): Set paragraph-separate for
	eclasses, in order to prevent rewrapping of paragraphs into a
	preceding eclass documentation token.

2023-08-24  Ulrich Müller  <ulm@gentoo.org>
